--- a/package.json
+++ b/package.json
@@ -1,1 +1,20 @@
-{"dependencies":{"cors":"^2.8.5","express":"^4.18.2","multer":"^1.4.5-lts.1"},"devDependencies":{"@types/node":"^20.8.4"}}
+{
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/multer": "^1.4.8",
+    "@types/node": "^20.8.4",
+    "bun-types": "latest"
+  },
+  "name": "bunserver",
+  "module": "index.ts",
+  "type": "module",
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  }
+}
